--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ native-tls = ["tungstenite/native-tls", "_native-tls"]
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
 mio = { version = "0.7", default-features = false, features = ["net", "os-poll"] }
+mime_guess = { version = "2.0", default-features = false }
+multipart = { version = "0.18", default-features = false, features = ["client"] }
+parking_lot = { version = "0.11", default-features = false }
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0", default-features = false }
 serde_repr = { version = "0.1", default-features = false }
