--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ mime_guess = { version = "2", default-features = false }
 mio = { version = "0.8", default-features = false, features = ["net", "os-poll"] }
 multipart = { version = "0.18", default-features = false, features = ["client"] }
 parking_lot = { version = "0.11", default-features = false }
+rand = { version = "0.8", default-features = false }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false }
 serde_repr = { version = "0.1", default-features = false }
